<resources>
    <string name="app_name">Contraint Layout</string>
    <string name="botao_principal">Botão Principal</string>
    <string name="texto_principal">Texto feito através da String</string>
    <string name="titulo_principal">Aprenda sobre edição de imagens</string>
    <string name="data">16/03/2020</string>
    <string name="autor">Jonas Hamerski</string>
    <string name="proximo">Próximo</string>
    <string name="anterior">Anterior</string>
</resources>
