<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:fillViewport="true">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/celular" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/titulo_principal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/data"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis eleifend quam adipiscing vitae proin sagittis nisl rhoncus mattis. Metus dictum at tempor commodo ullamcorper a lacus vestibulum sed. Lectus urna duis convallis convallis tellus id interdum. Donec pretium vulputate sapien nec sagittis. Risus feugiat in ante metus. Ut morbi tincidunt augue interdum velit. Erat velit scelerisque in dictum non. Tellus molestie nunc non blandit massa enim. Consectetur purus ut faucibus pulvinar. Libero justo laoreet sit amet. Dolor sit amet consectetur adipiscing elit ut aliquam purus. Cras ornare arcu dui vivamus arcu felis.  Urna molestie at elementum eu facilisis. Commodo odio aenean sed adipiscing diam. Pretium vulputate sapien nec sagittis aliquam. Mauris pellentesque pulvinar pellentesque habitant morbi tristique senectus et netus. Aliquet nibh praesent tristique magna sit amet purus. Quam id leo in vitae turpis massa sed elementum. Tortor condimentum lacinia quis vel eros donec. Auctor eu augue ut lectus. Quis hendrerit dolor magna eget est lorem. Massa placerat duis ultricies lacus sed turpis tincidunt id. Ut eu sem integer vitae justo eget magna. Cursus risus at ultrices mi tempus imperdiet. At tellus at urna condimentum mattis pellentesque id. Tellus at urna condimentum mattis pellentesque id. Velit euismod in pellentesque massa. Turpis nunc eget lorem dolor sed viverra ipsum nunc aliquet. Ullamcorper velit sed ullamcorper morbi tincidunt ornare massa. Dis parturient montes nascetur ridiculus mus mauris vitae. Ut etiam sit amet nisl purus in mollis. Faucibus in ornare quam viverra orci."
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/proximo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/anterior"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/autor"
        app:layout_constraintBaseline_toBaselineOf="@+id/button2"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>